helm/envoy/manifests/valkey.yaml
apiVersion: v1
kind: Service
metadata:
  name: valkey
  namespace: envoy-gateway-system
  labels:
    app: valkey
spec:
  selector:
    app: valkey
  ports:
    - name: valkey
      port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkey
  namespace: envoy-gateway-system
  labels:
    app: valkey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: valkey
  template:
    metadata:
      labels:
        app: valkey
    spec:
      containers:
        - name: valkey
          image: valkey/valkey:9.1.0-alpine
          ports:
            - containerPort: 6379
          resources:
            limits:
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 128Mi
